# coral-eigen

./: .gitignore  CMakeLists.txt  README.md
include/Eigen/src/Core/: Block.h
include/Eigen/src/Core/util/: Macros.h
include/eigen/unsupported/Eigen/: MatrixFunctions  NumericalDiff  Skyline
include/eigen/unsupported/Eigen/src/AutoDiff/: AutoDiffJacobian.h  AutoDiffScalar.h
include/eigen/unsupported/Eigen/src/BVH/: KdBVH.h
include/eigen/unsupported/Eigen/src/FFT/: ei_kissfft_impl.h
include/eigen/unsupported/Eigen/src/MatrixFunctions/: MatrixExponential.h  MatrixFunction.h
include/eigen/unsupported/Eigen/src/MoreVectorization/: MathFunctions.h
include/eigen/unsupported/Eigen/src/NonLinearOptimization/: lmpar.h  r1mpyq.h
include/eigen/unsupported/Eigen/src/Skyline/: SkylineInplaceLU.h  SkylineProduct.h  SkylineStorage.h
include/eigen/unsupported/Eigen/src/SparseExtra/: CholmodSupport.h  SimplicialCholesky.h  SparseLDLTLegacy.h  SparseLU.h
include/unsupported/Eigen/: AdolcForward  AlignedVector3  AutoDiff  BVH  CholmodSupport  FFT  IterativeSolvers  MPRealSupport  MoreVectorization  NonLinearOptimization  OpenGLSupport  Polynomials  SparseExtra  SuperLUSupport  UmfPackSupport
include/unsupported/Eigen/src/AutoDiff/: AutoDiffVector.h
include/unsupported/Eigen/src/BVH/: BVAlgorithms.h
include/unsupported/Eigen/src/FFT/: ei_fftw_impl.h
include/unsupported/Eigen/src/IterativeSolvers/: ConstrainedConjGrad.h  IterationController.h
include/unsupported/Eigen/src/MatrixFunctions/: MatrixFunctionAtomic.h  StemFunction.h
include/unsupported/Eigen/src/NonLinearOptimization/: HybridNonLinearSolver.h  LevenbergMarquardt.h  chkder.h  covar.h  dogleg.h  fdjac1.h  qrsolv.h  r1updt.h  rwupdt.h
include/unsupported/Eigen/src/NumericalDiff/: NumericalDiff.h
include/unsupported/Eigen/src/Polynomials/: Companion.h  PolynomialSolver.h  PolynomialUtils.h
include/unsupported/Eigen/src/Skyline/: SkylineMatrix.h  SkylineMatrixBase.h  SkylineUtil.h
include/unsupported/Eigen/src/SparseExtra/: Amd.h  CholmodSupportLegacy.h  RandomSetter.h  Solve.h  SparseLLT.h  SuperLUSupport.h  UmfPackSupport.h
modules/eigen/: Mat4.csl  Quat.csl  Vec3.csl  __init.lua
src/: CMakeLists.txt  Mat4.cpp  Quat.cpp  Vec3.cpp
tests/: CMakeLists.txt  MatrixTests.lua  QuatTests.lua  Vec3Tests.lua
